<?xml version ="1.0" encoding="utf-8"?>
<!--
    Student     :   Paula Dwan
    Student ID  :   13208660
    Course      :   COMP-47330 Practical Android Computing
    Assignment  :   1
    Due date    :   04-March-2015

    Summary     :   Email emulator where
                    1a. User launches application - main activity opens : 'ComposeEmailActivity'
                    1b. User enters values for fields : 'from', 'to', 'cc', 'bcc', 'subject', and
                        'message'.
                    2a. User clicks [Send] button and email fields excluding 'bcc' are displayed in
                        second activity as read only - 'DisplayEmailActivity'.
                    2b. User clicks [Clear] button and all fields are deleted and reset to initial
                        blank values.
                    3.  In 'DisplayEmailActivity' activity, [Back] button returns user to
                        'ComposeEmailActivity' with all original values for each field.
                    4.  If user closes application then the fields are populated with most recent
                        values.
    File        :   strings xml used throughout app
-->
<resources>
    <string name="app_name">EmailEmulator</string>
    <string name="app_logo">EE</string>
    <string name="title_activity_display_email">Display-EmailEmulator</string>

    <string name="action_settings">Settings</string>

    <string name="hint_from">Enter: sender\'s email.</string>
    <string name="hint_to">Enter: <b>main</b> recipient/s.</string>
    <string name="hint_cc">Enter: <b>copy</b> recipient/s.</string>
    <string name="hint_bcc">Enter: <b>blind copy</b> recipient/s.</string>
    <string name="hint_subject">Enter: Email subject.</string>
    <string name="hint_message">Enter: Email message.</string>

    <string name="email_from">From :</string>
    <string name="email_to">To :</string>
    <string name="email_bcc">BCC :</string>
    <string name="email_cc">CC :</string>
    <string name="email_subject">Subject :</string>
    <string name="email_message">Message :</string>

    <string name="btn_send_email">Send</string>
    <string name="btn_clear_email">Clear</string>
    <string name="btn_back_email">Back</string>

    <string name="error_email_null_value">Info : Nothing entered!</string>
    <string name="error_nok_email">Error : Invalid email entered!</string>
    <string name="error_nok_email_cc">Warning : no <b><i>copy</i></b> recipient/s entered!</string>
    <string name="error_nok_email_bcc">Warning : no <b><i>blind copy</i></b> recipient/s entered!</string>
    <string name="error_nok_subject">Warning : no subject entered!</string>
    <string name="error_nok_message">Warning : no message entered!</string>

</resources>