<?xml version ="1.0" encoding="utf-8"?>
<!--
    Student     :   Paula Dwan
    Student ID  :   13208660
    Course      :   COMP-47330 Practical Android Computing
    Assignment  :   1
    Due date    :   04-March-2015

    Summary     :   Email emulator where
                    1a. User launches application - main activity opens : 'ComposeEmailActivity'
                    1b. User enters values for fields : 'from', 'to', 'cc', 'bcc', 'subject', and
                        'message'.
                    2a. User clicks [Send] button and email fields excluding 'bcc' are displayed in
                        second activity as read only - 'DisplayEmailActivity'.
                    2b. User clicks [Clear] button and all fields are deleted and reset to initial
                        blank values.
                    3.  In 'DisplayEmailActivity' activity, [Back] button returns user to
                        'ComposeEmailActivity' with all original values for each field.
                    4.  If user closes application then the fields are populated with most recent
                        values.
    File        :   activity xml for DisplayEmailActivity
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutEmail"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/tableLayoutEmail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:stretchColumns="2"
        android:shrinkColumns="1" >

        <TableRow
            android:id="@+id/tableRowFrom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textViewFromTitle"
                android:layout_row="1"
                android:layout_column="1"
                android:textColor="#ffffff"
                android:background="#660066"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email_from" ></TextView>
            <TextView
                android:id="@+id/textViewFromValue"
                android:layout_row="1"
                android:layout_column="2"
                android:textColor="#000000"
                android:background="#e1e1e1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/error_email_null_value" > </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowTo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textViewToTitle"
                android:layout_row="2"
                android:layout_column="1"
                android:textColor="#ffffff"
                android:background="#660066"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email_to" ></TextView>
            <TextView
                android:id="@+id/textViewToValue"
                android:layout_row="2"
                android:layout_column="2"
                android:textColor="#000000"
                android:background="#e1e1e1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/error_email_null_value" > </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowCC"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textViewCcTitle"
                android:layout_row="3"
                android:layout_column="1"
                android:textColor="#ffffff"
                android:background="#660066"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email_cc" > </TextView>
            <TextView
                android:id="@+id/textViewCcValue"
                android:layout_row="3"
                android:layout_column="2"
                android:textColor="#000000"
                android:background="#e1e1e1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/error_email_null_value" > </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowSubject"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textViewSubjectTitle"
                android:layout_row="4"
                android:layout_column="1"
                android:textColor="#ffffff"
                android:background="#660066"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email_subject" > </TextView>
            <TextView
                android:id="@+id/textViewSubjectValue"
                android:layout_row="4"
                android:layout_column="2"
                android:textColor="#000000"
                android:background="#e1e1e1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/error_email_null_value" > </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRowMessage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textViewMessageTitle"
                android:layout_row="5"
                android:layout_column="1"
                android:textColor="#ffffff"
                android:background="#660066"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email_message" > </TextView>
            <TextView
                android:id="@+id/textViewMessageValue"
                android:layout_row="5"
                android:layout_column="2"
                android:textColor="#000000"
                android:background="#e1e1e1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="italic"
                android:text="@string/error_email_null_value" > </TextView>
        </TableRow>

        <TableRow android:id="@+id/tableRowButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center"
            android:padding="30dp">
            <Button
                android:id="@+id/btnBackEmail"
                android:text="@string/btn_back_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:onClick="backToEMailWriter"
                android:layout_column="1"> </Button>
        </TableRow>

    </TableLayout>

</ScrollView>